--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -1,7 +1,7 @@
 :root {
   --background-color: #ffffff;
-  --main-theme-color: #e82626;
-  --secondary-theme-color: #6b0f0f;
+  --main-theme-color: #918d8d;
+  --secondary-theme-color: #4b4949;
 
   --main-text-color: #000000;
   --secondary-text-color: #ffffff;
@@ -80,6 +80,15 @@ textarea:focus {
   box-shadow: 1px 1px 5px var(--main-outline-color);
 }
 
+#recipes.half-block {
+  width: 50%;
+  padding-right: 5%;
+}
+
+#your-recipes.half-block {
+  width: 45%;
+}
+
 .centered-holder-80p {
   position: absolute;
   margin: 0 auto;
@@ -114,9 +123,14 @@ textarea:focus {
   height: 100%;
   width: 75%;
   background: var(--background-color);
-  outline: var(--main-outline-color) solid 2px;
+  /*outline: var(--main-outline-color) solid 2px;*/
   left: 25%;
   top: 20%;
+  overflow-x: scroll;
+}
+
+.main-container::-webkit-scrollbar {
+  display: none;
 }
 
 .recipe-tile {
@@ -172,12 +186,20 @@ textarea:focus {
   font-weight: 500;
   background-color: var(--rating-background-color);
   float: left;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .recipe-rating-bar {
   height: 20px;
   background-color: var(--rating-color);
-  text-align: center;
+}
+
+.recipe-rating-text {
+  float: left;
+  margin-left: 50%;
+  transform: translate(-50%);
+  vertical-align: middle;
 }
 
 .recipe-page-button {
@@ -255,9 +277,9 @@ textarea:focus {
 .search-container {
   position: absolute;
   height: 20%;
-  width: 60%;
+  width: 55%;
   top: 35%;
-  left: 30%
+  left: 28%
 }
 
 .search-filter {
@@ -334,14 +356,16 @@ textarea:focus {
 .logo {
   position: absolute;
   height: 30%;
-  width: 20%;
+  width: fit-content;
+  max-width: 20%;
   font-weight: bold;
   font-size: 25px;
   background: var(--highlight-color);
   outline: var(--main-outline-color) solid 2px;
   user-select: none;
   top: 30%;
-  left: 3%;
+  left: 12.5%;
+  transform: translate(-50%);
 }
 
 .logo-text {
@@ -350,6 +374,14 @@ textarea:focus {
   line-height: normal;
   position: relative;
   margin-top: 7.5px;
+}
+
+.logo-img {
+  display: block;
+  max-height: fit-content;
+  height: 100%;
+  max-width: 100%;
+  object-fit: contain;
 }
 
 #timer {
@@ -370,8 +402,12 @@ textarea:focus {
 #recipe-info {
   position: absolute;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
   outline: 1px solid var(--main-outline-color);
+}
+
+#recipe-info::-webkit-scrollbar {
+  display: none;
 }
 
 .recipe-page-thumbnail-holder {
@@ -381,6 +417,7 @@ textarea:focus {
   max-width: 300px;
   margin: 0 auto;
   top: 20px;
+  border-radius: 15%;
 }
 
 .recipe-page-rating {
@@ -396,12 +433,13 @@ textarea:focus {
 
 #recipe-page-instructions {
   width: 100%;
-  min-height: 400px;
+  min-height: 350px;
   height: fit-content;
   overflow-y: hidden;
   overflow-x: hidden;
   outline: var(--main-outline-color) solid 2px;
   font-weight: 500;
+  border-radius: 15%;
   margin-top: 5px;
   margin-bottom: 20px;
   float: left;
@@ -599,6 +637,7 @@ p.recipe-interface-label {
   color: #1a1aff;
   cursor: pointer;
   user-select: none;
+  margin-bottom: 5px;
 }
 
 #add-recipe {
@@ -629,7 +668,7 @@ p.recipe-interface-label {
   right: 0;
   z-index: 9;
   height: 100%;
-  width: 500px;
+  width: 30%;
   background-color: var(--main-theme-color);
   border: 2px solid black;
   overflow-y: scroll;
@@ -690,7 +729,21 @@ p.recipe-interface-label {
   height: 100%;
   width: 40px;
   position: fixed;
-  right: 500px;
+  right: 30%;
   top: 0;
   user-select: none;
+  border-bottom-left-radius: 25%;
+  border-top-left-radius: 25%;
+  z-index: 10;
+}
+
+.header-login-icon {
+  float: right;
+  height: 50px;
+  font-size: 15px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: var(--highlight-color);
+  margin-top: 2%;
+  margin-right: 2%;
 }
