--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -11,20 +11,20 @@
     --rating-background-color: #877417;
 }
 
-/*:root {
+:root {
     --background-color: #ffffff;
     --main-theme-color: rgba(30, 53, 113, 0.55);
-    --secondary-theme-color: rgba(30, 53, 113, 0.55);
+    --secondary-theme-color: rgba(30, 53, 113, 1);
     --main-text-color: #000000;
     --secondary-text-color: #ffffff;
-    --main-outline-color: rgba(30, 53, 113, 0.55);
+    --main-outline-color: rgba(0, 0, 0, 1);
     --highlight-color: #ffffff;
     --timer-done-color: #aa0000;
     --rating-color: #ffdc2e;
     --rating-background-color: #877417;
     --font-family-Fira: "Fira Sans";
     --font-family-PT: "PT Serif";
-}*/
+}
 
 html {
     height: 100%;
@@ -152,13 +152,13 @@ textarea:focus {
 
 .main-container {
     position: fixed;
-    height: 100%;
+    height: 82%;
     width: 75%;
     background: var(--background-color);
     /*outline: var(--main-outline-color) solid 2px;*/
     left: 25%;
     top: 20%;
-    overflow-x: scroll;
+    overflow: scroll;
 }
 
 .main-container::-webkit-scrollbar {
@@ -801,4 +801,62 @@ p.recipe-interface-label {
     font-size: 15px;
 }
 
+.recipe-your-tile {
+    height: 200px;
+    max-width: 400px;
+    width: 100%;
+    min-width: 200px;
+    margin-left: 20px;
+    margin-top: 2.5%;
+    float: left;
+    border-radius: 15px;
+    /*font-size: 10;*/
+    color: var(--main-text-color);
+    background: rgba(30, 53, 113, 0.1);
+    outline: rgba(30, 53, 113, 0.1) solid 2px;
+}
 
+
+.recipe-your-tile-column {
+    height: 100%;
+    float: left;
+    box-shadow: none;
+}
+
+.recipe-your-rating {
+    display: block;
+    margin-top: 5px;
+    margin-left: 20px;
+    border-radius: 15px;
+    width: 85%;
+    height: 20px;
+    font-family: Fira Sans;
+    font-weight: 500;
+    background-color: var(--rating-background-color);
+    float: left;
+}
+
+.your-favorites {
+    border-radius: 15px;
+    height: 90px;
+    width: 70%;
+    margin-top: 40px;
+    margin-left: 33px;
+    background-color: var(--highlight-color);
+    outline: var(--main-outline-color) solid 7px;
+}
+
+.your-utilities {
+    margin-top: 10px;
+    /* 100 */
+}
+
+.recipe-utility-button {
+    text-decoration: underline;
+    font-family: PT Serif;
+    font-weight: 600;
+    color: #1a1aff;
+    cursor: pointer;
+    user-select: none;
+    margin-bottom: 5px;
+}
